# lawctl

./: Cargo.toml
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: CNAME  index.html  install
homebrew/: lawctl.rb
policies/: permissive.yaml  safe-ci.yaml  safe-dev.yaml
scripts/: install.sh
src/: lib.rs  main.rs
src/approval/: mod.rs  terminal.rs  types.rs
src/audit/: logger.rs  mod.rs  reader.rs  types.rs
src/cli/: go.rs  init.rs  log.rs  mod.rs  run.rs  setup.rs
src/gateway/: client.rs  mod.rs  protocol.rs  server.rs
src/gateway/handlers/: file_delete.rs  file_write.rs  git.rs  mod.rs  network.rs  shell.rs
src/hook/: main.rs
src/policy/: defaults.rs  engine.rs  linter.rs  mod.rs  parser.rs  types.rs
src/sandbox/: docker.rs  mod.rs  mount.rs  namespace.rs
src/shim/: main.rs
src/utils/: paths.rs
tests/: test_e2e.rs  test_gateway.rs  test_policy_engine.rs
tests/fixtures/: mock_agent.sh  test_policy.yaml
