[package]
name = "lawctl"
version = "0.1.0"
edition = "2021"
description = "Universal agent firewall — policy enforcement for AI coding agents"
license = "MIT"
repository = "https://github.com/abcxz/lawctl"

[lib]
name = "lawctl"
path = "src/lib.rs"

[[bin]]
name = "lawctl"
path = "src/main.rs"

[[bin]]
name = "lawctl-shim"
path = "src/shim/main.rs"

[[bin]]
name = "lawctl-hook"
path = "src/hook/main.rs"

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive", "env"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Docker SDK
bollard = "0.18"

# Terminal UI for approvals
crossterm = "0.28"
ratatui = "0.29"

# Glob pattern matching
glob = "0.3"
globset = "0.4"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID for session IDs
uuid = { version = "1", features = ["v4"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Directory paths
dirs = "6"

# Colored terminal output
colored = "3"

# Diff handling
similar = "2"

# Async trait support
async-trait = "0.1"

# Stream utilities (for Docker API)
futures-util = "0.3"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
tokio-test = "0.4"
